--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -18,35 +18,37 @@
 
     a {
       display: inline-block;
-      position: absolute;
+      position: relative;
       padding: 0 0.5rem;
       height: 5rem;
       line-height: 5rem;
       color: var(--gray-300);
+
       transition: color 0.2s;
 
       & + a {
-        margin-left: 7rem;
+        margin-left: 2rem;
       }
 
       &:hover {
         color: var(--white);
       }
 
-      &:active {
+      &.active {
         color: var(--white);
         font-weight: bold;
       }
 
-      &:active::after {
-       content: "";
-       height: 3px;
-       border-radius: 3px 3px 0 0;
-       width: 100%;
-       position: absolute;
-       bottom: 1px;
-       left: 0;
-       background: var(--yellow-500);
+      &.active::after {
+        content: '';
+        height: 3px;
+        border-radius: 3px 3px 0 0;
+        width: 100%;
+
+        position: absolute;
+        bottom: 1px;
+        left: 0;
+        background: var(--yellow-500);
       }
     }
   }
